--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="navbar">
                 <li><a href="#">Home</a></li>
                 <li> <a href="#">About Us</a></li>
-                <li> <a href="#"> Fitness Calculator</a></li>
+                <li> <a href="https://www.calculator.net/bmi-calculator.html" target="_blank"> Fitness Calculator</a></li>
                 <li> <a href="#"> Contact</a></li>
 
             </div>
@@ -39,7 +39,28 @@
         </div>
     </header>
 
-<div class="container">I am Container</div>
+    <p>Decide Commit Succeed</p>
+
+<div class="container">
+    <h1>Join the best gym of Lucknow</h1>
+<form action="noaction.php">
+
+    <div class="form-group">
+        <input type="text" name="" placeholder="Enter Name">
+    </div>
+    <div class="form-group">
+        <input type="text" name="" placeholder="Enter Name">
+    </div>
+    <div class="form-group">
+        <input type="text" name="" placeholder="Enter Name">
+    </div>
+    <div class="form-group">
+        <input type="text" name="" placeholder="Enter Name">
+    </div>
+    <button class="btn" >Submit</button>
+
+</form>
+</div>
 
 </body>
 </html>
