--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
         <input type="text" name="" placeholder="Enter Name">
     </div>
     <div class="form-group">
-        <input type="text" name="" placeholder="Enter Name">
+        <input type="number" name="" placeholder="Enter Age">
     </div>
     <div class="form-group">
-        <input type="text" name="" placeholder="Enter Name">
+        <input type="text" name="" placeholder="Enter Locality">
     </div>
-    <div class="form-group">
-        <input type="text" name="" placeholder="Enter Name">
-    </div>
+    <div class="radio" >
+        Gender: Male <input type="radio" name="myGender"> Female <input type="radio" name="myGender">
+        </div>
     <button class="btn" >Submit</button>
 
 </form>
