--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" href="index.css">
+<link rel="stylesheet" href="index.css">
 </head>
 
 <body>
@@ -26,7 +25,7 @@
             <div class="navbar">
                 <li><a href="#">Home</a></li>
                 <li> <a href="#">About Us</a></li>
-                <li> <a href="https://www.calculator.net/bmi-calculator.html" target="_blank"> Fitness Calculator</a></li>
+                <li> <a href="https://www.calculator.net/bmi-calculator.html" target="_blank"> BMI Calculator</a></li>
                 <li> <a href="#"> Contact</a></li>
 
             </div>
@@ -52,7 +51,7 @@
         <input type="number" name="" placeholder="Enter Age">
     </div>
     <div class="form-group">
-        <input type="text" name="" placeholder="Enter Locality">
+        <input type="email" name="" placeholder="Enter email">
     </div>
     <div class="radio" >
         Gender: Male <input type="radio" name="myGender"> Female <input type="radio" name="myGender">
